--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
 
 <head>
     <title>Programa de Mensagens</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
-    <h1>Programa de Mensagens</h1>
+    <h1>Mensagens UFSC</h1>
 
     <label for="identificador">Identificador:</label>
     <input type="text" id="identificador">
@@ -48,44 +49,7 @@
         <!-- Aqui serão exibidas as mensagens -->
     </div>
 
-    <script>
-        const mensagens = []; // Simulação de banco de dados
-
-        function adicionarMensagem() {
-            const identificador = document.getElementById("identificador").value;
-            const conteudo = document.getElementById("conteudo").value;
-
-            mensagens.push({ identificador, conteudo });
-
-            exibirMensagens();
-        }
-
-        function exibirMensagens() {
-            const mensagensDiv = document.getElementById("mensagens");
-            mensagensDiv.innerHTML = "";
-
-            for (const mensagem of mensagens) {
-                const mensagemDiv = document.createElement("div");
-                mensagemDiv.innerHTML = `<strong>${mensagem.identificador}:</strong> ${mensagem.conteudo}`;
-                mensagensDiv.appendChild(mensagemDiv);
-            }
-        }
-
-        document.getElementById("adicionar").addEventListener("click", adicionarMensagem);
-
-        // Recuperar parâmetros da URL (simulação)
-        const urlParams = new URLSearchParams(window.location.search);
-        const idParam = urlParams.get('id');
-
-        if (idParam) {
-            const mensagemEncontrada = mensagens.find(mensagem => mensagem.identificador === idParam);
-            if (mensagemEncontrada) {
-                document.getElementById("identificador").value = mensagemEncontrada.identificador;
-                document.getElementById("conteudo").value = mensagemEncontrada.conteudo;
-            }
-        }
-
-    </script>
+    <script> src='MenScript.js' </script>
 </body>
 
 </html>
