--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <head>
     <title>Programa de Mensagens</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="MenStyle.css">
 </head>
 
 <body>
